--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="img-circle" src="https://ca.slack-edge.com/T02NE0241-U010Z591TJP-272153e38b97-512">
 
         <p>Franco-Belgian human living in Brussels eager to become computer-fluent.</p>
-        <a class="btn-red" href="https://www.w3schools.com/tags/att_button_value.asp">Discover Me!</a>
+        <a class="btn-red" href="https://github.com/thibaultm955">Discover Me!</a>
 
     </div>
     <div class="card">
@@ -28,17 +28,17 @@
             </a>
           </li>
         <li>
-          <a href="#">
+          <a href="https://www.facebook.com/thibault.mambour?ref=bookmarks">
             <i class="fab fa-facebook-f"></i>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://www.linkedin.com/in/thibault-mambour/">
             <i class="fab fa-linkedin-in"></i>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://twitter.com/thibaultm95">
             <i class="fab fa-twitter"></i>
           </a>
         </li>
